[gd_scene load_steps=8 format=3 uid="uid://c5s0ny0v1voj6"]

[ext_resource type="Texture2D" uid="uid://cqdkw6b4bmsk5" path="res://Map_Icons/icon.svg" id="1_vh0y7"]
[ext_resource type="Script" uid="uid://dw7rq5hpby57h" path="res://Cargo/Cargo_Objects/train.gd" id="2_qvldk"]
[ext_resource type="Script" uid="uid://tfjb0jq0otay" path="res://Cargo/Cargo_Objects/train_window.gd" id="3_gn3y4"]
[ext_resource type="Texture2D" uid="uid://dbdjkc3txkt6y" path="res://Gui/Icons/add.png" id="4_7jhe4"]
[ext_resource type="Texture2D" uid="uid://cnt0fnx73uuf8" path="res://Gui/Icons/go.png" id="4_orobs"]
[ext_resource type="Texture2D" uid="uid://cauwoswolv6v5" path="res://Gui/Icons/no.png" id="5_0cs1o"]
[ext_resource type="Texture2D" uid="uid://b02j10d0auchi" path="res://Gui/Icons/go_back.png" id="6_807ss"]

[node name="Train" type="Sprite2D"]
z_index = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_vh0y7")
script = ExtResource("2_qvldk")

[node name="Train_Window" type="Window" parent="."]
position = Vector2i(0, 36)
size = Vector2i(600, 400)
script = ExtResource("3_gn3y4")

[node name="Panel" type="Panel" parent="Train_Window"]
self_modulate = Color(1, 1, 1, 0.27451)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="RichTextLabel" parent="Train_Window"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][font_size=35]Train[/font_size][/center]"
fit_content = true
autowrap_mode = 0

[node name="Routes" type="ItemList" parent="Train_Window"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_bottom = 150.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0

[node name="Add_Stop" type="Button" parent="Train_Window/Routes"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
focus_mode = 0
toggle_mode = true
icon = ExtResource("4_7jhe4")

[node name="Start" type="Button" parent="Train_Window/Routes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -29.0
offset_right = 29.0
offset_bottom = 58.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("4_orobs")

[node name="Stop" type="Button" parent="Train_Window/Routes"]
layout_mode = 0
offset_left = 221.0
offset_top = 29.0
offset_right = 279.0
offset_bottom = 87.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("5_0cs1o")

[node name="Back" type="Button" parent="Train_Window/Routes"]
layout_mode = 0
offset_left = 221.0
offset_top = 58.0
offset_right = 279.0
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
icon = ExtResource("6_807ss")

[node name="Goods" type="ItemList" parent="Train_Window"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_vertical = 2
focus_mode = 0

[connection signal="close_requested" from="Train_Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Train_Window/Routes/Add_Stop" to="Train_Window" method="_on_add_stop_pressed"]
[connection signal="pressed" from="Train_Window/Routes/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Train_Window/Routes/Stop" to="." method="_on_stop_pressed"]
